--- a/index.html
+++ b/index.html
@@ -8,25 +8,18 @@
 <title>Sen Zhao</title>
 </head>
 <body>
-<table summary="Table for page layout." id="tlayout">
-<tr valign="top">
-<td id="layout-menu">
-<div class="menu-category">Sen Zhao</div>
-<div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="research.html">Research</a></div>
-</td>
-<td id="layout-content">
+<div id="layout-content">
 <div id="toptitle">
 <h1>Sen Zhao</h1>
 </div>
 <table class="imgtable"><tr><td>
 <img src="photo.jpg" alt="alt text" width="182px" height="182px" />&nbsp;</td>
-<td align="left"><p>Machine Learning Researcher at Google Research <br />
+<td align="left"><p>Data Scientist at Google AI <br />
 My <a href="mailto:sen-zhao@sen-zhao.com">E-mail</a> and <a href="https://www.linkedin.com/in/sen-zhao">LinkedIn</a><br /></p>
 </td></tr></table>
 <h2>Experience</h2>
 <ul>
-<li><p>Statistician, Machine Intelligence, <a href="http://www.google.com">Google Inc.</a>, Mountain View, CA, Apr 2017 -</p>
+<li><p>Data Scientist, Machine Intelligence, <a href="http://www.google.com">Google LLC</a>, Mountain View, CA, Apr 2017 -</p>
 </li>
 <li><p>Research Scientist Intern, Personalization, <a href="http://www.amazon.com">Amazon Corporate LLC</a>, Seattle, WA, Mar 2016 - Jun 2016</p>
 </li>
@@ -38,6 +31,45 @@ My <a href="mailto:sen-zhao@sen-zhao.com">E-mail</a> and <a href="https://www.li
 </li>
 <li><p>B.A. in <a href="https://apps.carleton.edu/curricular/econ/">Economics</a> and <a href="https://apps.carleton.edu/curricular/math/">Mathematics</a>, 
 <a href="http://www.carleton.edu/">Carleton College</a>, Northfield, MN, 2012</p>
+</li>
+</ul>
+<h2>Publications</h2>
+<ul>
+<li><p><b>Zhao, S.</b>, Milani Fard, M., and <a href="https://mayagupta.org/">Gupta, M.</a> (2017). 
+Metric-optimized example weights. (<a href="https://arxiv.org/abs/1805.10582">arXiv</a>)</p>
+</li>
+<li><p><b>Zhao, S.</b>, <a href="http://www.biostat.washington.edu/~ashojaie/">Shojaie, A.</a>, and <a href="http://faculty.washington.edu/dwitten/">Witten, D.</a> (2017). In defense of the indefensible: A very naïve approach to high-dimensional inference. (<a href="https://arxiv.org/abs/1705.05543">arXiv</a>)</p>
+</li>
+<li><p><a href="http://sharedresources.fredhutch.org/profile/randolph-timothy">Randolph, T. W.</a>, <b>Zhao, S.</b>, Copeland, W., Hullar, M., and <a href="http://www.biostat.washington.edu/~ashojaie/">Shojaie, A.</a> (2017). <a href="https://projecteuclid.org/euclid.aoas/1520564483">Kernel-penalized regression for analysis of microbiome data</a>. <i>The Annals of Applied Statistics</i>, <b>12</b>(1): 540-566. (<a href="http://arxiv.org/abs/1511.00297">arXiv</a>)</p>
+</li>
+<li><p><b>Zhao, S.</b>, and <a href="http://www.biostat.washington.edu/~ashojaie/">Shojaie, A.</a> (2016). <a href="http://onlinelibrary.wiley.com/doi/10.1111/biom.12418/abstract">A significance test for graph-constrained estimation</a>. <i>Biometrics</i>, <b>72</b>(2): 484-493. (<a href="https://arxiv.org/abs/1506.08339">arXiv</a>; <a href="https://cran.r-project.org/web/packages/Grace/index.html">CRAN</a>)</p>
+</li>
+</ul>
+<h2>Conference Talks</h2>
+<ul>
+<li><p>Global Artificial Intelligence Conference, Boston, MA, 2018</p>
+</li>
+<li><p>Global Big Data Conference, Santa Clara, CA, 2018</p>
+</li>
+<li><p>Open Data Science Conference West, San Francisco, CA, 2017</p>
+</li>
+<li><p>Joint Statistical Meetings, Chicago, IL, 2016</p>
+</li>
+<li><p>International Biometric Conference, Victoria, BC, 2016</p>
+</li>
+<li><p>International Chinese Statistical Association Applied Statistics Symposium, Atlanta, GA, 2016</p>
+</li>
+<li><p>Conference on Statistical Learning and Data Science, Chapel Hill, NC, 2016</p>
+</li>
+<li><p>Seattle Symposium in Biostatistics, Seattle, WA, 2015</p>
+</li>
+<li><p>Joint Statistical Meetings, Seattle, WA, 2015</p>
+</li>
+<li><p>Western North American Region of the International Biometric Society Annual Meeting, Boise, ID, 2015</p>
+</li>
+<li><p>Northfield Undergraduate Mathematics Symposium, Northfield, MN, 2011</p>
+</li>
+<li><p>Midwest Economic Association Annual Meeting, Evanston, IL, 2010</p>
 </li>
 </ul>
 <h2>Selected Awards and Honors</h2>
@@ -59,11 +91,9 @@ My <a href="mailto:sen-zhao@sen-zhao.com">E-mail</a> and <a href="https://www.li
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2017-05-07 15:43:56 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2018-08-08 20:22:34 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
-</td>
-</tr>
-</table>
+</div>
 </body>
 </html>
