--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <table class="imgtable"><tr><td>
 <img src="photo.jpg" alt="alt text" width="182px" height="182px" />&nbsp;</td>
 <td align="left"><p>Data Scientist at Google AI <br />
-My <a href="mailto:sen-zhao@sen-zhao.com">E-mail</a> and <a href="https://www.linkedin.com/in/sen-zhao">LinkedIn</a><br /></p>
+<a href="mailto:sen-zhao@sen-zhao.com">E-mail</a> and <a href="https://www.linkedin.com/in/sen-zhao">LinkedIn</a><br /></p>
 </td></tr></table>
 <h2>Experience</h2>
 <ul>
@@ -98,7 +98,7 @@ My <a href="mailto:sen-zhao@sen-zhao.com">E-mail</a> and <a href="https://www.li
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-08-08 20:44:44 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2018-08-08 20:48:21 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
