--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <table class="imgtable"><tr><td>
 <img src="photo.jpg" alt="alt text" width="182px" height="182px" />&nbsp;</td>
 <td align="left"><p>Data Scientist at Google AI <br />
-<a href="mailto:sen-zhao@sen-zhao.com">E-mail</a> and <a href="https://www.linkedin.com/in/sen-zhao">LinkedIn</a><br /></p>
+<a href="mailto:sen-zhao@sen-zhao.com">E-mail</a>, <a href="https://www.linkedin.com/in/sen-zhao">LinkedIn</a>, <a href="https://scholar.google.com/citations?user=AKbar8oAAAAJ&amp;hl=en">Google Scholar</a><br /></p>
 </td></tr></table>
 <h2>Experience</h2>
 <ul>
@@ -58,7 +58,7 @@
 </li>
 <li><p>Global Big Data Conference, Santa Clara, CA, 2018</p>
 </li>
-<li><p>Open Data Science Conference West, San Francisco, CA, 2017</p>
+<li><p>Open Data Science Conference, San Francisco, CA, 2017</p>
 </li>
 <li><p>Joint Statistical Meetings, Chicago, IL, 2016</p>
 </li>
@@ -98,7 +98,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-08-08 20:48:21 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2018-08-09 18:45:52 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
