--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 </td></tr></table>
 <h2>Experience</h2>
 <ul>
-<li><p>Data Scientist, Machine Intelligence, <a href="http://www.google.com">Google LLC</a>, Mountain View, CA, Apr 2017 -</p>
+<li><p>Data Scientist - Machine Intelligence, Apr 2017 - present <br /> 
+<a href="http://www.google.com">Google LLC</a>, Mountain View, CA</p>
 </li>
-<li><p>Research Scientist Intern, Personalization, <a href="http://www.amazon.com">Amazon Corporate LLC</a>, Seattle, WA, Mar 2016 - Jun 2016</p>
+<li><p>Research Scientist Intern - Personalization, Mar 2016 - Jun 2016 <br />
+<a href="http://www.amazon.com">Amazon Corporate LLC</a>, Seattle, WA </p>
 </li>
 </ul>
 <h2>Education</h2>
@@ -98,7 +100,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-08-09 18:45:52 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2018-08-11 13:20:08 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
