--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </li>
 <li><p><a href="https://projecteuclid.org/euclid.aoas/1520564483">Kernel-Penalized Regression for Analysis of Microbiome Data</a> <br />
 <a href="http://sharedresources.fredhutch.org/profile/randolph-timothy">Randolph, T. W.</a>, <b>Zhao, S.</b>, Copeland, W., Hullar, M., and <a href="http://www.biostat.washington.edu/~ashojaie/">Shojaie, A.</a> (2018) <br />
-<i>The Annals of Applied Statistics</i>, <b>12</b>(1): 540-566 (<a href="http://arxiv.org/abs/1511.00297">arXiv</a>)</p>
+<i>Annals of Applied Statistics</i>, <b>12</b>(1): 540-566 (<a href="http://arxiv.org/abs/1511.00297">arXiv</a>)</p>
 </li>
 <li><p><a href="http://onlinelibrary.wiley.com/doi/10.1111/biom.12418/abstract">A Significance Test for Graph-Constrained Estimation</a> <br />
 <b>Zhao, S.</b>, and <a href="http://www.biostat.washington.edu/~ashojaie/">Shojaie, A.</a> (2016) <br />
@@ -100,7 +100,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-08-11 13:20:08 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2018-08-11 13:55:42 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
