--- a/index.html
+++ b/index.html
@@ -81,6 +81,23 @@
 <li><p>Midwest Economic Association Annual Meeting, Evanston, IL, 2010</p>
 </li>
 </ul>
+<h2>Paper Reviews</h2>
+<ul>
+<li><p>Conference on Neural Information Processing Systems (NIPS) (7 papers)</p>
+</li>
+<li><p>International Conference on Artificial Intelligence and Statistics (AISTATS) (4 papers)</p>
+</li>
+<li><p>International Conference for Learning Representations (ICLR) (3 papers)</p>
+</li>
+<li><p>Journal of Machine Learning Research (3 papers)</p>
+</li>
+<li><p>Journal of Multivariate Analysis (2 papers)</p>
+</li>
+<li><p>Journal of American Statistical Association (1 paper)</p>
+</li>
+<li><p>Biometrika (1 paper) </p>
+</li>
+</ul>
 <h2>Selected Awards and Honors</h2>
 <ul>
 <li><p>Outstanding Ph.D. Student Award, University of Washington, 2017</p>
@@ -100,7 +117,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-08-11 13:55:42 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2018-11-15 22:28:38 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
