--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 </ul>
 <h2>Conference Talks</h2>
 <ul>
+<li><p>Global Artificial Intelligence Conference, Santa Clara, CA, 2019</p>
+</li>
 <li><p>Global Artificial Intelligence Conference, Boston, MA, 2018</p>
 </li>
 <li><p>Global Big Data Conference, Santa Clara, CA, 2018</p>
@@ -81,21 +83,25 @@
 <li><p>Midwest Economic Association Annual Meeting, Evanston, IL, 2010</p>
 </li>
 </ul>
-<h2>Paper Reviews</h2>
+<h2>Reviews</h2>
 <ul>
-<li><p>Conference on Neural Information Processing Systems (NIPS) (7 papers)</p>
+<li><p>Program Committee, Reviewer, ACML&rsquo;19</p>
 </li>
-<li><p>International Conference on Artificial Intelligence and Statistics (AISTATS) (4 papers)</p>
+<li><p>Reviewer, ICML&rsquo;19</p>
 </li>
-<li><p>International Conference for Learning Representations (ICLR) (3 papers)</p>
+<li><p>Reviewer, AISTATS&rsquo;19</p>
 </li>
-<li><p>Journal of Machine Learning Research (3 papers)</p>
+<li><p>Reviewer, ICLR&rsquo;19</p>
 </li>
-<li><p>Journal of Multivariate Analysis (2 papers)</p>
+<li><p>Reviewer, NeurIPS&rsquo;18</p>
 </li>
-<li><p>Journal of American Statistical Association (1 paper)</p>
+<li><p>Reviewer, JMLR</p>
 </li>
-<li><p>Biometrika (1 paper) </p>
+<li><p>Reviewer, JMVA</p>
+</li>
+<li><p>Reviewer, JASA</p>
+</li>
+<li><p>Reviewer, Biometrika</p>
 </li>
 </ul>
 <h2>Selected Awards and Honors</h2>
@@ -117,7 +123,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2018-11-15 22:28:38 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-03-05 21:05:40 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
