--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
 </td></tr></table>
 <h2>Experience</h2>
 <ul>
-<li><p>Data Scientist - Machine Intelligence, Apr 2017 - present <br /> 
-<a href="http://www.google.com">Google LLC</a>, Mountain View, CA</p>
+<li><p>Apr 2017 - present, Data Scientist, <a href="http://www.google.com">Google LLC</a>, Mountain View, CA</p>
 </li>
-<li><p>Research Scientist Intern - Personalization, Mar 2016 - Jun 2016 <br />
-<a href="http://www.amazon.com">Amazon Corporate LLC</a>, Seattle, WA </p>
+<li><p>Mar 2016 - Jun 2016, Research Scientist Intern, <a href="http://www.amazon.com">Amazon Corporate LLC</a>, Seattle, WA</p>
 </li>
 </ul>
 <h2>Education</h2>
@@ -37,13 +35,15 @@
 </ul>
 <h2>Publications</h2>
 <ul>
-<li><p>Metric-Optimized Example Weights <br /> 
-<b>Zhao, S.</b>, Milani Fard, M., and <a href="https://mayagupta.org/">Gupta, M.</a> (2018) <br />
-(<a href="https://arxiv.org/abs/1805.10582">arXiv</a>)</p>
+<li><p>Network Differential Connectivity Analysis <br /> <b>Zhao, S.</b>, Ottinger, S., Peck, S., Mac Donald, C., and <a href="http://www.biostat.washington.edu/~ashojaie/">Shojaie, A.</a> (2019) <br /> (<a href="https://arxiv.org/abs/1909.13464">arXiv</a>)</p>
 </li>
 <li><p>In Defense of the Indefensible: A Very Naïve Approach to High-Dimensional Inference <br />
-<b>Zhao, S.</b>, <a href="http://www.biostat.washington.edu/~ashojaie/">Shojaie, A.</a>, and <a href="http://faculty.washington.edu/dwitten/">Witten, D.</a> (2018) <br />
+<b>Zhao, S.</b>, <a href="http://www.biostat.washington.edu/~ashojaie/">Shojaie, A.</a>, and <a href="http://faculty.washington.edu/dwitten/">Witten, D.</a> (2019) <br />
 (<a href="https://arxiv.org/abs/1705.05543">arXiv</a>)</p>
+</li>
+<li><p><a href="http://proceedings.mlr.press/v97/zhao19b">Metric-Optimized Example Weights</a> <br /> 
+<b>Zhao, S.</b>, Milani Fard, M., <a href="https://sites.google.com/a/g.harvard.edu/harikrishna-narasimhan/">Narasimhan, H.</a>, and <a href="https://mayagupta.org/">Gupta, M.</a> (2019) <br />
+In <i>Proceedings of the 36th International Conference on Machine Learning</i>, volume 79, pages 7533-7542 (<a href="https://arxiv.org/abs/1805.10582">arXiv</a>)</p>
 </li>
 <li><p><a href="https://projecteuclid.org/euclid.aoas/1520564483">Kernel-Penalized Regression for Analysis of Microbiome Data</a> <br />
 <a href="http://sharedresources.fredhutch.org/profile/randolph-timothy">Randolph, T. W.</a>, <b>Zhao, S.</b>, Copeland, W., Hullar, M., and <a href="http://www.biostat.washington.edu/~ashojaie/">Shojaie, A.</a> (2018) <br />
@@ -51,11 +51,13 @@
 </li>
 <li><p><a href="http://onlinelibrary.wiley.com/doi/10.1111/biom.12418/abstract">A Significance Test for Graph-Constrained Estimation</a> <br />
 <b>Zhao, S.</b>, and <a href="http://www.biostat.washington.edu/~ashojaie/">Shojaie, A.</a> (2016) <br />
-<i>Biometrics</i>, <b>72</b>(2): 484-493 (<a href="https://arxiv.org/abs/1506.08339">arXiv</a>; <a href="https://cran.r-project.org/web/packages/Grace/index.html">CRAN</a>)</p>
+<i>Biometrics</i>, <b>72</b>(2): 484-493 (<a href="https://arxiv.org/abs/1506.08339">arXiv</a>)</p>
 </li>
 </ul>
 <h2>Conference Talks</h2>
 <ul>
+<li><p>International Conference on Machine Learning, Long Beach, CA, 2019</p>
+</li>
 <li><p>Global Artificial Intelligence Conference, Santa Clara, CA, 2019</p>
 </li>
 <li><p>Global Artificial Intelligence Conference, Boston, MA, 2018</p>
@@ -84,26 +86,7 @@
 </li>
 </ul>
 <h2>Reviews</h2>
-<ul>
-<li><p>Program Committee, Reviewer, ACML&rsquo;19</p>
-</li>
-<li><p>Reviewer, ICML&rsquo;19</p>
-</li>
-<li><p>Reviewer, AISTATS&rsquo;19</p>
-</li>
-<li><p>Reviewer, ICLR&rsquo;19</p>
-</li>
-<li><p>Reviewer, NeurIPS&rsquo;18</p>
-</li>
-<li><p>Reviewer, JMLR</p>
-</li>
-<li><p>Reviewer, JMVA</p>
-</li>
-<li><p>Reviewer, JASA</p>
-</li>
-<li><p>Reviewer, Biometrika</p>
-</li>
-</ul>
+<p>AAAI&rsquo;20, ACML&rsquo;19, AISTATS&rsquo;20, AISTATS&rsquo;19, ICLR&rsquo;20, ICLR&rsquo;19, ICML&rsquo;19, NeurIPS&rsquo;19, NeurIPS&rsquo;18, Biometrika, JASA, JMLR, JMVA</p>
 <h2>Selected Awards and Honors</h2>
 <ul>
 <li><p>Outstanding Ph.D. Student Award, University of Washington, 2017</p>
@@ -123,7 +106,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2019-03-05 21:05:40 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2019-10-22 22:10:32 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
