--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="photo.jpg" alt="alt text" width="182px" height="182px" />&nbsp;</td>
-<td align="left"><p>Data Scientist at Google AI <br />
+<td align="left"><p>Machine Learning Engineer at Google AI <br />
 <a href="mailto:sen-zhao@sen-zhao.com">E-mail</a>, <a href="https://www.linkedin.com/in/sen-zhao">LinkedIn</a>, <a href="https://scholar.google.com/citations?user=AKbar8oAAAAJ&amp;hl=en">Google Scholar</a><br /></p>
 </td></tr></table>
 <h2>Experience</h2>
 <ul>
-<li><p>Apr 2017 - present, Data Scientist, <a href="http://www.google.com">Google LLC</a>, Mountain View, CA</p>
+<li><p>Apr 2017 - present, Machine Learning Engineer, <a href="http://www.google.com">Google LLC</a>, Mountain View, CA</p>
 </li>
 <li><p>Mar 2016 - Jun 2016, Research Scientist Intern, <a href="http://www.amazon.com">Amazon Corporate LLC</a>, Seattle, WA</p>
 </li>
