--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </td></tr></table>
 <h2>Experience</h2>
 <ul>
-<li><p>Apr 2017 - present, Machine Learning Engineer, <a href="http://www.google.com">Google LLC</a>, Mountain View, CA</p>
+<li><p>Apr 2017 - present, Machine Learning Engineer, <a href="http://www.google.com">Google</a>, Mountain View, CA</p>
 </li>
-<li><p>Mar 2016 - Jun 2016, Research Scientist Intern, <a href="http://www.amazon.com">Amazon Corporate LLC</a>, Seattle, WA</p>
+<li><p>Mar 2016 - Jun 2016, Research Scientist Intern, <a href="http://www.amazon.com">Amazon.com</a>, Seattle, WA</p>
 </li>
 </ul>
 <h2>Education</h2>
